--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.94.2"
   },
   "devDependencies": {
